// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`templates.mobi creates the markup 1`] = `
"<div class=\\"figure__large figure__inline figure__inline--portrait test\\">
            <figure id=\\"1\\">
                <div class=\\"figure__items\\" style=\\"width: 70%; margin: 0 auto;\\">
                    <span>
                        <img class=\\"portrait\\" alt=\\"test\\" src=\\"../images/test\\" style=\\"width: 100%; max-width: 100%; height: auto;\\"/>
                    </span>
                    <div class=\\"figcaption\\" style=\\"width: 100%; max-width: 100%; height: auto;\\">
                        <p class=\\"small\\">test</p>
                    </div>
                </div>
            </figure>
        </div>"
`;

exports[`templates.mobi creates the markup 2`] = `
"<div class=\\"figure__large figure__inline figure__inline--landscape test\\">
            <figure id=\\"1\\">
                <div class=\\"figure__items\\">
                    <span>
                        <img class=\\"landscape\\" alt=\\"test\\" src=\\"../images/test\\" style=\\"max-width: 100%;\\"/>
                    </span>
                    <div class=\\"figcaption\\" style=\\"max-width: 100%;\\">
                        <p class=\\"small\\">test</p>
                    </div>
                </div>
            </figure>
        </div>"
`;

exports[`templates.mobi creates the markup 3`] = `
"<div class=\\"figure__large figure__inline figure__inline--portrait-high test\\">
            <figure id=\\"1\\">
                <div class=\\"figure__items\\" style=\\"width: 60%; margin: 0 auto;\\">
                    <span>
                        <img class=\\"portrait-long\\" alt=\\"test\\" src=\\"../images/test\\" style=\\"width: 100%; max-width: 100%; height: auto;\\"/>
                    </span>
                    <div class=\\"figcaption\\" style=\\"width: 100%; max-width: 100%; height: auto;\\">
                        <p class=\\"small\\">test</p>
                    </div>
                </div>
            </figure>
        </div>"
`;

exports[`templates.mobi creates the markup 4`] = `
"<div class=\\"figure__large figure__inline figure__inline--square test\\">
            <figure id=\\"1\\">
                <div class=\\"figure__items\\" style=\\"width: 85%; margin: 0 auto;\\">
                    <span>
                        <img class=\\"square\\" alt=\\"test\\" src=\\"../images/test\\" style=\\"width: 100%; max-width: 100%; height: auto;\\"/>
                    </span>
                    <div class=\\"figcaption\\" style=\\"width: 100%; max-width: 100%; height: auto;\\">
                        <p class=\\"small\\">test</p>
                    </div>
                </div>
            </figure>
        </div>"
`;

exports[`templates.mobi creates the markup 5`] = `
"
            <div class=\\"figure__large figure__inline figure__inline--landscape test\\">
                <figure id=\\"1\\">

                    <div class=\\"figure__items\\">

                        <div class=\\"audio\\">
                            <audio undefined>
                                undefined
                                <div class=\\"media__fallback__undefined media__fallback--image figure__small--landscape figure__small\\">
                                    <figure>
                                        <img src=\\"undefined\\" alt=\\"Media fallback image\\"/>
                                    </figure>
                                </div>
                                <p class=\\"media__fallback__undefined media__fallback--text\\">Your device does not support the HTML5 undefined API.</p>
                            </audio>
                        </div>

                        <div class=\\"figcaption\\" style=\\"max-width: 100%;\\">
                            <p class=\\"small\\">
                                test<br/>
                                <a href=\\"1.xhtml#ref1\\">Return</a>
                            </p>
                        </div>

                    </div>

                </figure>
            </div>"
`;

exports[`templates.mobi creates the markup 6`] = `
"
            <div class=\\"figure__large figure__inline figure__inline--landscape test\\">
                <figure id=\\"1\\">

                    <div class=\\"figure__items\\">

                        <div class=\\"video\\">
                            <video undefined>
                                undefined
                                <div class=\\"media__fallback__undefined media__fallback--image figure__small--landscape figure__small\\">
                                    <figure>
                                        <img src=\\"undefined\\" alt=\\"Media fallback image\\"/>
                                    </figure>
                                </div>
                                <p class=\\"media__fallback__undefined media__fallback--text\\">Your device does not support the HTML5 undefined API.</p>
                            </video>
                        </div>

                        <div class=\\"figcaption\\" style=\\"max-width: 100%;\\">
                            <p class=\\"small\\">
                                test<br/>
                                <a href=\\"1.xhtml#ref1\\">Return</a>
                            </p>
                        </div>

                    </div>

                </figure>
            </div>"
`;

exports[`templates.mobi creates the markup 7`] = `
"
            <div class=\\"figure__large figure__inline figure__inline--landscape test\\">
                <figure id=\\"1\\">
                    <div class=\\"figure__items\\">
                        <div class=\\"iframe\\">
                            <iframe src=\\"test\\" />
                        </div>

                        <div class=\\"figcaption\\" style=\\"max-width: 100%;\\">
                            <p class=\\"small\\">
                                test<br/>
                                <a href=\\"1.xhtml#ref1\\">Return</a>
                            </p>
                        </div>

                    </div>

                </figure>
            </div>"
`;

exports[`templates.mobi creates the markup 8`] = `
"<div class=\\"figure__large\\">
            <figure id=\\"1\\">
                <div class=\\"figure__items\\" style=\\"width: 70%; margin: 0 auto;\\">
                    <span>
                        <img class=\\"portrait\\" alt=\\"test\\" src=\\"../images/test\\" style=\\"width: 100%; max-width: 100%; height: auto;\\"/>
                    </span>
                    <div class=\\"figcaption\\" style=\\"width: 100%; max-width: 100%; height: auto;\\">
                        <p class=\\"small\\">test<br/><a href=\\"1.xhtml#ref1\\">Return</a></p>
                    </div>
                </div>
            </figure>
        </div>"
`;

exports[`templates.mobi creates the markup 9`] = `
"<div class=\\"figure__large\\">
            <figure id=\\"1\\">
                <div class=\\"figure__items\\">
                    <span>
                        <img class=\\"landscape\\" alt=\\"test\\" src=\\"../images/test\\" style=\\"max-width: 100%;\\"/>
                    </span>
                    <div class=\\"figcaption\\" style=\\"max-width: 100%;\\">
                        <p class=\\"small\\">test<br/><a href=\\"1.xhtml#ref1\\">Return</a></p>
                    </div>
                </div>
            </figure>
        </div>"
`;

exports[`templates.mobi creates the markup 10`] = `
"<div class=\\"figure__large\\">
            <figure id=\\"1\\">
                <div class=\\"figure__items\\" style=\\"width: 60%; margin: 0 auto;\\">
                    <span>
                        <img class=\\"portrait-long\\" alt=\\"test\\" src=\\"../images/test\\" style=\\"width: 100%; max-width: 100%; height: auto;\\"/>
                    </span>
                    <div class=\\"figcaption\\" style=\\"width: 100%; max-width: 100%; height: auto;\\">
                        <p class=\\"small\\">test<br/><a href=\\"1.xhtml#ref1\\">Return</a></p>
                    </div>
                </div>
            </figure>
        </div>"
`;

exports[`templates.mobi creates the markup 11`] = `
"<div class=\\"figure__large\\">
            <figure id=\\"1\\">
                <div class=\\"figure__items\\" style=\\"width: 85%; margin: 0 auto;\\">
                    <span>
                        <img class=\\"square\\" alt=\\"test\\" src=\\"../images/test\\" style=\\"width: 100%; max-width: 100%; height: auto;\\"/>
                    </span>
                    <div class=\\"figcaption\\" style=\\"width: 100%; max-width: 100%; height: auto;\\">
                        <p class=\\"small\\">test<br/><a href=\\"1.xhtml#ref1\\">Return</a></p>
                    </div>
                </div>
            </figure>
        </div>"
`;

exports[`templates.mobi creates the markup 12`] = `
"
            <div class=\\"figure__large\\">
                <figure id=\\"1\\">

                    <div class=\\"figure__items\\">

                        <div class=\\"audio\\">
                            <audio undefined>
                                undefined
                                <div class=\\"media__fallback__undefined media__fallback--image figure__small--landscape figure__small\\">
                                    <figure>
                                        <img src=\\"undefined\\" alt=\\"Media fallback image\\"/>
                                    </figure>
                                </div>
                                <p class=\\"media__fallback__undefined media__fallback--text\\">Your device does not support the HTML5 undefined API.</p>
                            </audio>
                        </div>

                        <div class=\\"figcaption\\" style=\\"max-width: 100%;\\">
                            <p class=\\"small\\">
                                test<br/>
                                <a href=\\"1.xhtml#ref1\\">Return</a>
                            </p>
                        </div>

                    </div>

                </figure>
            </div>"
`;

exports[`templates.mobi creates the markup 13`] = `
"
            <div class=\\"figure__large\\">
                <figure id=\\"1\\">

                    <div class=\\"figure__items\\">

                        <div class=\\"video\\">
                            <video undefined>
                                undefined
                                <div class=\\"media__fallback__undefined media__fallback--image figure__small--landscape figure__small\\">
                                    <figure>
                                        <img src=\\"undefined\\" alt=\\"Media fallback image\\"/>
                                    </figure>
                                </div>
                                <p class=\\"media__fallback__undefined media__fallback--text\\">Your device does not support the HTML5 undefined API.</p>
                            </video>
                        </div>

                        <div class=\\"figcaption\\" style=\\"max-width: 100%;\\">
                            <p class=\\"small\\">
                                test<br/>
                                <a href=\\"1.xhtml#ref1\\">Return</a>
                            </p>
                        </div>

                    </div>

                </figure>
            </div>"
`;

exports[`templates.mobi creates the markup 14`] = `
"
            <div class=\\"figure__large\\">
                <figure id=\\"1\\">
                    <div class=\\"figure__items\\">
                        <div class=\\"iframe\\">
                            <iframe src=\\"test\\" />
                        </div>

                        <div class=\\"figcaption\\" style=\\"max-width: 100%;\\">
                            <p class=\\"small\\">
                                test<br/>
                                <a href=\\"1.xhtml#ref1\\">Return</a>
                            </p>
                        </div>

                    </div>

                </figure>
            </div>"
`;

exports[`templates.mobi creates the markup 15`] = `
"<div class=\\"figure__large figure__inline figure__inline--portrait break-before\\">
            <figure id=\\"1\\">
                <div class=\\"figure__items\\" style=\\"width: 70%; margin: 0 auto;\\">
                    <span>
                        <img class=\\"portrait\\" alt=\\"test\\" src=\\"../images/test\\" style=\\"width: 100%; max-width: 100%; height: auto;\\"/>
                    </span>
                    <div class=\\"figcaption\\" style=\\"width: 100%; max-width: 100%; height: auto;\\">
                        <p class=\\"small\\">test</p>
                    </div>
                </div>
            </figure>
        </div>"
`;

exports[`templates.mobi creates the markup 16`] = `
"<div class=\\"figure__large figure__inline figure__inline--landscape break-before\\">
            <figure id=\\"1\\">
                <div class=\\"figure__items\\">
                    <span>
                        <img class=\\"landscape\\" alt=\\"test\\" src=\\"../images/test\\" style=\\"max-width: 100%;\\"/>
                    </span>
                    <div class=\\"figcaption\\" style=\\"max-width: 100%;\\">
                        <p class=\\"small\\">test</p>
                    </div>
                </div>
            </figure>
        </div>"
`;

exports[`templates.mobi creates the markup 17`] = `
"<div class=\\"figure__large figure__inline figure__inline--portrait-high break-before\\">
            <figure id=\\"1\\">
                <div class=\\"figure__items\\" style=\\"width: 60%; margin: 0 auto;\\">
                    <span>
                        <img class=\\"portrait-long\\" alt=\\"test\\" src=\\"../images/test\\" style=\\"width: 100%; max-width: 100%; height: auto;\\"/>
                    </span>
                    <div class=\\"figcaption\\" style=\\"width: 100%; max-width: 100%; height: auto;\\">
                        <p class=\\"small\\">test</p>
                    </div>
                </div>
            </figure>
        </div>"
`;

exports[`templates.mobi creates the markup 18`] = `
"<div class=\\"figure__large figure__inline figure__inline--square break-before\\">
            <figure id=\\"1\\">
                <div class=\\"figure__items\\" style=\\"width: 85%; margin: 0 auto;\\">
                    <span>
                        <img class=\\"square\\" alt=\\"test\\" src=\\"../images/test\\" style=\\"width: 100%; max-width: 100%; height: auto;\\"/>
                    </span>
                    <div class=\\"figcaption\\" style=\\"width: 100%; max-width: 100%; height: auto;\\">
                        <p class=\\"small\\">test</p>
                    </div>
                </div>
            </figure>
        </div>"
`;

exports[`templates.mobi creates the markup 19`] = `
"
            <div class=\\"figure__large figure__inline figure__inline--landscape break-before\\">
                <figure id=\\"1\\">

                    <div class=\\"figure__items\\">

                        <div class=\\"audio\\">
                            <audio undefined>
                                undefined
                                <div class=\\"media__fallback__undefined media__fallback--image figure__small--landscape figure__small\\">
                                    <figure>
                                        <img src=\\"undefined\\" alt=\\"Media fallback image\\"/>
                                    </figure>
                                </div>
                                <p class=\\"media__fallback__undefined media__fallback--text\\">Your device does not support the HTML5 undefined API.</p>
                            </audio>
                        </div>

                        <div class=\\"figcaption\\" style=\\"max-width: 100%;\\">
                            <p class=\\"small\\">
                                test<br/>
                                <a href=\\"1.xhtml#ref1\\">Return</a>
                            </p>
                        </div>

                    </div>

                </figure>
            </div>"
`;

exports[`templates.mobi creates the markup 20`] = `
"
            <div class=\\"figure__large figure__inline figure__inline--landscape break-before\\">
                <figure id=\\"1\\">

                    <div class=\\"figure__items\\">

                        <div class=\\"video\\">
                            <video undefined>
                                undefined
                                <div class=\\"media__fallback__undefined media__fallback--image figure__small--landscape figure__small\\">
                                    <figure>
                                        <img src=\\"undefined\\" alt=\\"Media fallback image\\"/>
                                    </figure>
                                </div>
                                <p class=\\"media__fallback__undefined media__fallback--text\\">Your device does not support the HTML5 undefined API.</p>
                            </video>
                        </div>

                        <div class=\\"figcaption\\" style=\\"max-width: 100%;\\">
                            <p class=\\"small\\">
                                test<br/>
                                <a href=\\"1.xhtml#ref1\\">Return</a>
                            </p>
                        </div>

                    </div>

                </figure>
            </div>"
`;

exports[`templates.mobi creates the markup 21`] = `
"
            <div class=\\"figure__large figure__inline figure__inline--landscape break-before\\">
                <figure id=\\"1\\">
                    <div class=\\"figure__items\\">
                        <div class=\\"iframe\\">
                            <iframe src=\\"test\\" />
                        </div>

                        <div class=\\"figcaption\\" style=\\"max-width: 100%;\\">
                            <p class=\\"small\\">
                                test<br/>
                                <a href=\\"1.xhtml#ref1\\">Return</a>
                            </p>
                        </div>

                    </div>

                </figure>
            </div>"
`;
